tests/ui/repeat-expr/copy-check-when-count-inferred-later.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/copy-check-when-count-inferred-later.rs:8:14
   |
LL |     let a = [String::new(); _];
   |              ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |
   = note: the `Copy` trait is required because this value will be copied for each element of the array
help: create an inline `const` block
   |
LL |     let a = [const { String::new() }; _];
   |              +++++++               +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
